--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
   "builds": [
-    { "src": "client/package.json", "use": "@vercel/static-build", "config": { "distDir": "client/build" } },
-    { "src": "server/**/*.js", "use": "@vercel/node" }
+    { "src": "server/package.json", "use": "@vercel/node" },
+    { "src": "client/package.json", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "server/$1.js" },
-    { "src": "/(.*)", "dest": "client/build/$1" }
+    { "src": "/api/(.*)", "dest": "server/$1" },
+    { "src": "/(.*)", "dest": "client/$1" }
   ]
 }
