--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,3 @@
 {
-  "vercel": 2,
-  "builds": [
-    { "src": "*.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/" }
-  ]
+  "vercel": 2
 }
