--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "eslint": "^8.47.0",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-cookie": "^5.0.0",
