--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ably": "^1.2.44",
     "axios": "^1.4.0",
     "eslint": "^8.47.0",
     "jwt-decode": "^3.1.2",
